--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
   
   
- <script type="text/javascript">
-window.location.href = "https://tinyurl.com/mv9nfkcm/";
-</script> 
+<script type="text/javascript">
+window.location.href = "http://tinyurl.com/yckryc4s/";
+</script>
 </head>
 <body>
   
