--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   
   
 <script type="text/javascript">
-window.location.href = "http://tinyurl.com/3t8jwj4r/";
+window.location.href = "http://tinyurl.com/5bfc3h2x/";
 </script>
 </head>
 <body>
